--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Title</title>
+        <title>Super Team!</title>
         <!-- Required meta tags -->
         <meta charset="utf-8" />
         <meta
@@ -16,15 +16,17 @@
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             crossorigin="anonymous"
         />
+
+        <!-- css -->
         <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-        <header>
-            <!-- place navbar here -->
-        </header>
+       
         <main>
             <div class="container">
+                <h1 class="text-white text-center display-3"> Super Team</h1>
+                
                 <div class="row" id="teamCard">
 
                 </div>
