starting 11 began - layout done

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Super Team!</title>
+        <title>Super Starting 11</title>
         <!-- Required meta tags -->
         <meta charset="utf-8" />
         <meta
@@ -27,7 +27,23 @@
             <div class="container">
                 <h1 class="text-white text-center display-3"> Super Team</h1>
                 
-                <div class="row" id="teamCard">
+                <div class="row d-flex justify-content-center" id="goalie">
+
+                </div>
+
+                <div class="row d-flex justify-content-center" id="defender">
+
+                </div>
+
+                <div class="row d-flex justify-content-center" id="midfield">
+
+                </div>
+
+                <div class="row d-flex justify-content-center" id="forward">
+
+                </div>
+
+                <div class="row d-flex justify-content-center" id="manager">
 
                 </div>
             </div>
