finished goalie (alisson), and 3/4 of defense (james, van dijk, konate)

--- a/index.html
+++ b/index.html
@@ -19,31 +19,34 @@
 
         <!-- css -->
         <link rel="stylesheet" href="style.css">
+
+        <!-- favicon -->
+        <link rel="shortcut icon" href="favicon-soccer.png" type="image/x-icon">
     </head>
 
     <body>
        
         <main>
             <div class="container">
-                <h1 class="text-white text-center display-3"> Super Team</h1>
+                <h1 class="text-white text-center display-2">Starting 11🔥</h1>
                 
-                <div class="row d-flex justify-content-center" id="goalie">
+                <div class="row d-flex justify-content-center m-2" id="goalie">
 
                 </div>
 
-                <div class="row d-flex justify-content-center" id="defender">
+                <div class="row d-flex justify-content-center m-2" id="defender">
 
                 </div>
 
-                <div class="row d-flex justify-content-center" id="midfield">
+                <div class="row d-flex justify-content-center m-2" id="midfield">
 
                 </div>
 
-                <div class="row d-flex justify-content-center" id="forward">
+                <div class="row d-flex justify-content-center m-2" id="forward">
 
                 </div>
 
-                <div class="row d-flex justify-content-center" id="manager">
+                <div class="row d-flex justify-content-center m-2" id="manager">
 
                 </div>
             </div>
