--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         <link rel="stylesheet" href="style.css">
 
         <!-- favicon -->
-        <link rel="shortcut icon" href="favicon-soccer.png" type="image/x-icon">
+        <link rel="shortcut icon" href="soccer-favicon.png" type="image/x-icon">
     </head>
 
     <body>
        
         <main>
-            <div class="container">
+            <div class="container-fluid">
                 <h1 class="text-white text-center display-2">Starting 11🔥</h1>
                 
                 <div class="row d-flex justify-content-center m-2" id="goalie">
