finally done oh my god

--- a/index.html
+++ b/index.html
@@ -21,20 +21,21 @@
         <link rel="stylesheet" href="style.css">
 
         <!-- favicon -->
-        <link rel="shortcut icon" href="soccer-favicon.png" type="image/x-icon">
+        <link rel="shortcut icon" href="favicon-32x32.png" type="image/x-icon">
     </head>
 
     <body>
        
         <main>
             <div class="container-fluid">
-                <h1 class="text-white text-center display-2">Starting 11🔥</h1>
+                <h1 class="text-white text-center display-2 caramel">Best Starting 11🔥</h1>
+                <h2 class="text-white text-center caramel">Best Line Up from 23/24 Premier League Season</h2>
                 
-                <div class="row d-flex justify-content-center m-2" id="goalie">
+                <div class="row d-flex justify-content-center m-2 card-deck" id="goalie">
 
                 </div>
 
-                <div class="row d-flex justify-content-center m-2" id="defender">
+                <div class="row d-flex justify-content-center m-2 align-items-stretch" id="defender">
 
                 </div>
 
